# coingrab

./: .gitignore  Cargo.toml  notes.md
fancy_flocks/: Cargo.toml
fancy_flocks/src/: dirty_flock.rs  lib.rs  sd_flock.rs
src/: atomic_blobject.rs  coins.rs  lib.rs  main.rs  sentiment.rs  util.rs
src/model/: v1.rs
src/social/: fourchan.rs
