[package]
authors = ["Brian Anderson <andersrb@gmail.com>"]
name = "coingrab"
version = "0.1.0"

[dependencies]
fancy_flocks = { path = "fancy_flocks" }
chrono = { version = "0.3.1", features = ["serde"] }
env_logger = "0.4.3"
error-chain = "0.10.0"
lazy_static = "0.2.8"
log = "0.3.8"
rand = "0.3.15"
reqwest = "0.6.2"
select = "0.4.0"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
tempdir = "0.3.5"
toml = "0.4.1"
